# INDOLOGY-forum-data

./: .gitignore  README.md
.github/workflows/: static.yml
data/: 01-00003.txt
data/1990/: 11-00000.txt  11-00001.txt  11-00002.txt  11-00003.txt  11-00004.txt  11-00005.txt  11-00006.txt  11-00007.txt  11-00008.txt  11-00009.txt  11-00010.txt  11-00011.txt  11-00012.txt  11-00013.txt  11-00014.txt  11-00015.txt  12-00000.txt  12-00001.txt  12-00002.txt  12-00003.txt  12-00004.txt  12-00005.txt
data/1991/: 01-00000.txt  01-00001.txt  01-00002.txt  01-00003.txt  01-00004.txt  02-00000.txt  02-00001.txt  02-00002.txt  02-00003.txt  02-00004.txt  02-00005.txt  02-00006.txt  02-00007.txt  02-00008.txt  02-00009.txt  02-00010.txt  02-00011.txt  02-00012.txt  02-00013.txt  02-00014.txt  03-00000.txt  04-00000.txt  04-00001.txt  04-00002.txt  04-00003.txt  04-00004.txt  04-00005.txt  04-00006.txt  05-00000.txt  05-00001.txt  05-00002.txt  05-00003.txt  05-00004.txt  05-00005.txt  05-00006.txt  05-00007.txt  05-00008.txt  05-00009.txt  05-00010.txt  05-00011.txt  (+111 more)
data/1992/: 01-00000.txt  01-00001.txt  01-00002.txt  01-00003.txt  01-00004.txt  01-00005.txt  01-00006.txt  01-00007.txt  01-00008.txt  01-00009.txt  02-00000.txt  (+205 more)
input/: 2023-April.txt  2023-August.txt  2023-February.txt  2023-January.txt  2023-July.txt  2023-June.txt  2023-March.txt  2023-May.txt  2023-October.txt  2023-September.txt
modules/: Cargo.toml
modules/text-data-to-index-cards/: Cargo.toml  release.sh  text-data-to-index-cards
modules/text-data-to-index-cards/src/: main.rs  tokenizer.rs
(+89141 files in other folders)
