[package]
name = "text-data-to-index-cards"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
glob = "0.3.1"
rust_lemmatizer = "0.3.0"
solirom-lemmatizer = { path = "../solirom-lemmatizer"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
